--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="app"></div>
     <script type="module"
-            src="./src/index.ts"></script>
+            src="../src/index.ts"></script>
 </body>
 
 </html>
