--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon"
-          type="image/svg+xml"
-          href="/assets/logo.svg" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-    <title>Dish IDEAS</title>
+      <meta charset="UTF-8" />
+      <link rel="manifest"
+            href="/manifest.json">
+      <link rel="icon"
+            type="image/svg+xml"
+            href="/assets/logo.svg" />
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+      <title>Dish IDEAS</title>
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="module"
-            src="./src/index.ts"></script>
+      <div id="app"></div>
+      <script type="module"
+              src="./src/index.ts">
+            </script>
 </body>
 
 </html>
