--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
       <meta charset="UTF-8" />
+      <meta name="theme-color"
+            content="#000000" />
+      <meta name="color-scheme"
+            content="dark light" />
       <link rel="manifest"
             href="/manifest.json">
       <link rel="icon"
